Верстка sidebar, разметка по grid

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,3 +5,11 @@
 body {
   font-family: $font-stackAdd;
 }
+// .header {
+//   visibility: hidden;
+//   position: absolute;
+//   top: -100px;
+// }
+@import 'utils/grid';
+@import 'blocks/sidebar';
+@import 'blocks/footer';
