--- a/src/scss/utils/_var.scss
+++ b/src/scss/utils/_var.scss
@@ -4,6 +4,9 @@ $color-card: #fdfdfd;
 $color-textDark: #7b899a;
 $color-text: #8d9cae;
 $color-textTitle: #a3afbe; //
+$bgc-sidebar1: #edfff1;
+$bgc-sidebar2: #edfffd; //
 // Переменные шрифты
 $font-stack: sans-serif;
 $font-stackAdd: 'Roboto Regular', sans-serif;
+$font-title: 'Lora Regular', serif;
