--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,8 +2,17 @@
 @import 'utils/font';
 @import 'utils/var';
 
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: $font-stackAdd;
+  background-color: $color-background;
 }
 // .header {
 //   visibility: hidden;
@@ -12,4 +21,5 @@ body {
 // }
 @import 'utils/grid';
 @import 'blocks/sidebar';
+@import 'blocks/main';
 @import 'blocks/footer';
