--- a/src/scss/blocks/_main.scss
+++ b/src/scss/blocks/_main.scss
@@ -1,11 +1,11 @@
 .main {
-  padding-top: 72px;
-  padding-left: 42px;
+  padding-top: 2em;
+  padding-left: 1em;
 
   &-title {
     color: $color-textDark;
     font-size: 36px;
-    margin-bottom: 43px;
+    margin-bottom: 1em;
     line-height: 42px;
     font-style: normal;
     font-weight: normal;
@@ -22,8 +22,9 @@
   display: flex;
   flex-direction: column;
   background-color: $color-card;
-  max-width: 880px;
+  max-width: 680px;
   width: 100%;
+  padding: 0 16px;
   margin-right: 16px;
   margin-bottom: 67px;
 
@@ -31,71 +32,61 @@
     margin-right: 0;
   }
 
-  &-time {
+  &-header {
     font-family: $font-title;
     font-size: 14px;
     color: $color-textTitle;
     margin-top: 16px;
-    margin-bottom: 4px;
+    margin-bottom: 16px;
+  }
+
+  &-body {
+    margin-bottom: 16px;
 
     &__title {
-      padding-left: 10px;
+      color: $color-textDark;
+      margin-bottom: 12px;
+      text-align: center;
     }
-  }
 
-  &__title {
-    color: $color-textDark;
-    margin-bottom: 12px;
-    padding-left: 10px;
-    text-align: center;
-  }
+    &__descr {
+      display: flex;
+      flex-direction: row;
+      margin-bottom: 16px;
+    }
 
-  &__descr {
-    display: flex;
-    flex-direction: row;
-    margin-bottom: 16px;
-    padding: 0 10px;
-
-    &-text {
+    &__text {
       align-self: center;
+      line-height: 1.3;
     }
   }
 
-  &__links {
+  &-footer {
     display: flex;
     flex-direction: row;
     margin-bottom: 16px;
     justify-content: space-between;
     align-items: center;
-    padding: 0 10px;
-    // align-content: center;
-    // line-height: 1.4;
-    // vertical-align: middle;
+
+    &__link--youtube {
+      position: relative;
+      padding-right: 32px;
+
+      &::after {
+        content: url("../img/icons/youtube.png");
+        position: absolute;
+        right: 0;
+        top: -2px;
+        display: block;
+      }
+    }
   }
 
   &__img {
     margin-right: 12px;
   }
 
-  &-link--youtube {
-    position: relative;
-    padding-right: 32px;
-    text-decoration: none;
-    line-height: 1.2;
-    vertical-align: middle;
-
-    &::after {
-      content: url("../img/icons/youtube.png");
-      // background-image: url("../img/icons/youtube.png");
-      position: absolute;
-      right: 0;
-      top: -3px;
-      display: block;
-    }
-  }
-
   &__carousel {
-    padding: 0 10px;
     margin-bottom: 16px;
   }
 }
