--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,12 +13,27 @@
 body {
   font-family: $font-stackAdd;
   background-color: $color-background;
+  color: $color-text;
+  font-size: 18px;
 }
-// .header {
-//   visibility: hidden;
-//   position: absolute;
-//   top: -100px;
-// }
+
+.header {
+  visibility: hidden;
+  position: absolute;
+  top: -100px;
+}
+
+.link {
+  line-height: 1.2;
+  vertical-align: middle;
+  text-decoration: none;
+  color: $color-text-link;
+  transition: 1s;
+
+  &:hover {
+    color: $darken-link-hover;
+  }
+}
 @import 'utils/grid';
 @import 'blocks/sidebar';
 @import 'blocks/main';
