--- a/src/scss/utils/_var.scss
+++ b/src/scss/utils/_var.scss
@@ -3,10 +3,14 @@ $color-background: #fafafa;
 $color-card: #fdfdfd;
 $color-textDark: #7b899a;
 $color-text: #8d9cae;
-$color-textTitle: #a3afbe; //
+$color-textTitle: #a3afbe;
+$color-text-link: #ad7979; //
 $bgc-sidebar1: #edfff1;
 $bgc-sidebar2: #edfffd; //
 // Переменные шрифты
 $font-stack: sans-serif;
 $font-stackAdd: 'Roboto Regular', sans-serif;
-$font-title: 'Lora Regular', serif;
+$font-title: 'Lora Regular', serif; //
+//Оформление наведения на элементы
+$lighten-link-hover: lighten($color-text-link, 20%);
+$darken-link-hover: darken($color-text-link, 20%);
