--- a/src/scss/blocks/_main.scss
+++ b/src/scss/blocks/_main.scss
@@ -4,7 +4,7 @@
 
   &-title {
     color: $color-textDark;
-    font-size: 36px;
+    font-size: 2.2rem;
     margin-bottom: 1em;
     line-height: 42px;
     font-style: normal;
@@ -14,8 +14,9 @@
 
 .cards {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-direction: column;
+  margin-right: 16px;
+  // flex-wrap: wrap;
 }
 
 .card {
@@ -25,16 +26,11 @@
   max-width: 680px;
   width: 100%;
   padding: 0 16px;
-  margin-right: 16px;
   margin-bottom: 67px;
-
-  &:nth-child(even) {
-    margin-right: 0;
-  }
 
   &-header {
     font-family: $font-title;
-    font-size: 14px;
+    font-size: 0.7rem;
     color: $color-textTitle;
     margin-top: 16px;
     margin-bottom: 16px;
@@ -47,6 +43,7 @@
       color: $color-textDark;
       margin-bottom: 12px;
       text-align: center;
+      font-weight: normal;
     }
 
     &__descr {
@@ -57,7 +54,8 @@
 
     &__text {
       align-self: center;
-      line-height: 1.3;
+      line-height: 1.4;
+      font-size: 1rem;
     }
   }
 
