--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,31 +10,37 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 14px;
+}
+
 body {
   font-family: $font-stackAdd;
   background-color: $color-background;
   color: $color-text;
-  font-size: 18px;
+  font-weight: normal;
 }
 
-.header {
+.header-hidden {
   visibility: hidden;
   position: absolute;
   top: -100px;
+  text-align: center;
+  background-color: $color-background;
 }
 
 .link {
   line-height: 1.2;
-  vertical-align: middle;
   text-decoration: none;
   color: $color-text-link;
   transition: 1s;
+  font-size: 1rem;
 
   &:hover {
     color: $darken-link-hover;
   }
 }
 @import 'utils/grid';
-@import 'blocks/sidebar';
+@import 'blocks/header';
 @import 'blocks/main';
 @import 'blocks/footer';
