--- a/src/template/footer.html
+++ b/src/template/footer.html
@@ -1,1 +1,9 @@
-<link rel="stylesheet" href="./css/style.css">
+<footer class="footer">
+  <div class="footer__copy">
+    <span>&copy; 2017-2020 Оксана Черкашина</span>
+  </div>
+  <!-- /.copy -->
+  <div class="footer-icons">
+    <span>Сделано с <img src="./img/icons/heart-solid.png" alt="маленькое сердечко" class="footer-icons__img"> и <img src="./img/icons/coffee-solid.png" alt="с чашкой чай" class="footer-icons__img"> </span></div>
+  <!-- /.footer__icons -->
+</footer>
