--- a/src/scss/utils/_var.scss
+++ b/src/scss/utils/_var.scss
@@ -1,6 +1,7 @@
 // Переменные цвета
 $color-background: #fafafa;
 $color-card: #fdfdfd;
+$color-text404: #eea9a9;
 $color-textDark: #7b899a;
 $color-text: #8d9cae;
 $color-textTitle: #a3afbe;
