--- a/src/template/header.html
+++ b/src/template/header.html
@@ -13,9 +13,14 @@
     </div>
     <!-- /.header__content -->
 
-    <div class="icons">
-      <a href="" class="link"><img src="./img/icons/vk.png" alt="логотип вконтакте"></a>
-      <a href="" class="link"><img src="./img/icons/slack.png" alt="логотип slack"></a>
+    <div class="icon">
+      <div class="icon__link">
+        <a href="#" class="link"><img class="icon__img" src="./img/icons/vk.png" alt="логотип вконтакте"></a></div>
+      <!-- /.icons__link -->
+      <div class="icon__link">
+        <a href="#" class="link"><img class="icon__img" src="./img/icons/slack.png" alt="логотип slack"></a>
+      </div>
+      <!-- /.icons__link -->
     </div>
   </div>
   <!-- /.container -->
