--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -48,18 +48,35 @@
   }
 }
 
-.icons {
+.icon {
   width: 100%;
   text-align: center;
   position: absolute;
   bottom: 10px;
   left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-  .link {
+  &__link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    background-color: #fff;
+    border: 1px solid $color-background;
     margin-right: 4px;
+    border-radius: 50%;
+    cursor: pointer;
+    vertical-align: middle;
 
     &:last-child {
-      margin-right: 4px;
+      margin-right: 0;
     }
+  }
+
+  &__img {
+    vertical-align: middle;
   }
 }
