--- a/src/scss/blocks/_footer.scss
+++ b/src/scss/blocks/_footer.scss
@@ -1,19 +1,18 @@
 .footer {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  margin: 16px;
-  height: 80px;
-  line-height: 80px;
+  &-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    // margin: 16px;
+    height: 80px;
+    line-height: 80px;
+  }
 
   &__copy {
-    // display: inline-block;
-    margin-right: 16px;
-    // vertical-align: middle;
+    display: inline-block;
   }
 
   &-icons {
-    // position: relative;
     &__img {
       margin: 0 4px;
       transform: translateY(25%);
