--- a/src/scss/pages/_error.scss
+++ b/src/scss/pages/_error.scss
@@ -1,15 +1,14 @@
 .error {
   &__header {
     text-align: center;
-    transform: translateX(-100px);
     font-size: 9rem;
     color: $color-text404;
     margin: 124px auto 84px;
   }
 
   &__content {
-    text-align: center;
-    transform: translateX(100px);
+    text-align: right;
+    padding-right: 3rem;
     margin-bottom: 42px;
   }
 
@@ -20,13 +19,16 @@
 
   &__link {
     text-align: right;
-    margin-right: 10rem;
+    padding-right: 2rem;
   }
 }
 
-.footer {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
+#error {
+  .footer {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
 }
