--- a/src/html/template/header.html
+++ b/src/html/template/header.html
@@ -5,10 +5,11 @@
       <div class="header__img"><img src="./img/header-img.jpg" alt="Фото Оксана Черкашина"></div>
       <!-- /.header__img -->
 
-      <p class="header__descr">Я педагог дополнительного образования в доме творчества и организатор региональных соревнований по робототехнике <a class="header__link link" href="http://xn--90acgda4cbjegs2i.xn--p1ai/">Роботы вперед!</a></p>
+      <p class="header__descr">Я педагог дополнительного образования в доме творчества и организатор региональных соревнований по робототехнике <a class="header__link link" href="http://xn--90acgda4cbjegs2i.xn--p1ai/" target="_blank">Роботы
+          вперед!</a></p>
 
       <div class="links">
-        <a class="link" href="#">Больше обо мне...</a>
+        <a class="link" href="./index.html">На главную</a>
       </div>
     </div>
     <!-- /.header__content -->
@@ -17,9 +18,9 @@
       <div class="icon__link">
         <a href="#" class="link"><img class="icon__img" src="./img/icons/vk.png" alt="логотип вконтакте"></a></div>
       <!-- /.icons__link -->
-      <div class="icon__link">
+      <!-- <div class="icon__link">
         <a href="#" class="link"><img class="icon__img" src="./img/icons/slack.png" alt="логотип slack"></a>
-      </div>
+      </div> -->
       <!-- /.icons__link -->
     </div>
   </div>
