--- a/src/scss/utils/_mobile.scss
+++ b/src/scss/utils/_mobile.scss
@@ -54,6 +54,16 @@
   .card__img {
     display: none;
   }
+
+  .archiv {
+    text-align: center;
+    padding: 8px 16px;
+    margin-bottom: 8px;
+
+    &__link {
+      margin-right: 0;
+    }
+  }
 }
 @media screen and (max-width: 425px) {
   .card {
