Подготовка статических файлов

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -46,5 +46,6 @@ body {
 @import 'blocks/header';
 @import 'blocks/main';
 @import 'blocks/footer';
+@import 'blocks/about';
 @import 'pages/error';
 @import 'utils/mobile';
