--- a/src/html/template/footer-script.html
+++ b/src/html/template/footer-script.html
@@ -1,3 +1,4 @@
 <!-- Подключение скриптов и стилей в футере -->
-
+<link rel="stylesheet" href="./css/app.css">
 <link rel="stylesheet" href="./css/style.css">
+<script src="./js/app.min.js" charset="utf-8"></script>
