Подключение slick, стилизация статьи Роботрон. + разметка open graph

--- a/src/scss/blocks/_main.scss
+++ b/src/scss/blocks/_main.scss
@@ -74,6 +74,10 @@
     justify-content: space-between;
     align-items: center;
 
+    &__link {
+      display: inline-block;
+    }
+
     &__link--youtube {
       position: relative;
       padding-right: 32px;
