--- a/src/html/template/footer-script.html
+++ b/src/html/template/footer-script.html
@@ -2,3 +2,4 @@
 <link rel="stylesheet" href="./css/app.css">
 <link rel="stylesheet" href="./css/style.css">
 <script src="./js/app.min.js" charset="utf-8"></script>
+<script src="./js/main.min.js" charset="utf-8"></script>
