--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -46,4 +46,5 @@ body {
 @import 'blocks/footer';
 @import 'blocks/about';
 @import 'pages/error';
-@import 'utils/mobile';
+@import 'components/carousel';
+@import 'utils/media';
