Исправил главную картинку, адаптировал под мобильную верстку. Исправил блог и другие ошибки под мобильные устройства.

--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -8,11 +8,15 @@
   height: 100vh;
   font-size: 1rem;
 
+  &-content {
+    margin-top: 30px;
+  }
+
   &__title {
     color: $color-text;
     text-align: center;
-    margin-top: 30px;
     font-family: $font-title;
+    margin-bottom: 30px;
 
     &-first {
       margin-left: -100px;
@@ -28,16 +32,19 @@
 
   &__img {
     text-align: center;
-    margin-top: 30px;
-    margin-bottom: 30px;
-
-    img {
-      border-radius: 10px;
-    }
+    width: 250px;
+    height: 300px;
+    background-color: inherit;
+    background-image: url("../img/header-img.jpg");
+    background-position: center top;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 20px;
   }
 
   &__descr {
     font-style: 14px;
+    margin-top: 30px;
     margin-bottom: 14px;
     line-height: 1.4;
     text-align: center;
