--- a/src/html/template/blog/header.html
+++ b/src/html/template/blog/header.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="header-content">
       <h2 class="header__title"><span class="header__title-first">Оксана</span> <br><span class="header__title-second">Черкашина</span></h2>
-      <div class="header__img"><img src="../img/header-img.jpg" alt="Фото Оксана Черкашина"></div>
+      <div class="header__img"></div>
       <!-- /.header__img -->
 
       <p class="header__descr">Я педагог дополнительного образования в доме творчества и организатор региональных соревнований по робототехнике <a class="header__link link" href="http://xn--90acgda4cbjegs2i.xn--p1ai/" target="_blank">Роботы
