--- a/src/scss/blocks/_about.scss
+++ b/src/scss/blocks/_about.scss
@@ -5,7 +5,7 @@
   max-width: 680px;
   width: 100%;
   padding: 0 16px;
-  margin-bottom: 64px;
+  margin-bottom: 48px;
 
   &-header {
     font-size: 0.9rem;
@@ -71,11 +71,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-right: 12px;
-    width: 300px;
-    margin: 16px;
+    width: 100%;
+    margin-bottom: 16px;
 
     img {
+      max-width: 450px;
       width: 100%;
     }
   }
