update: тестирование картинок для сраниц, правка стилей

--- a/src/html/template/blog/header.html
+++ b/src/html/template/blog/header.html
@@ -10,7 +10,7 @@
           вперед!</a></p>
 
       <div class="links">
-        <a class="link" href="../index.html">На главную</a>
+        <a class="link" href="../about.html">Больше обо мне...</a>
       </div>
     </div>
     <!-- /.header__content -->
