--- a/src/html/template/header.html
+++ b/src/html/template/header.html
@@ -1,17 +1,17 @@
-<!-- Блок хедер для страниц обо мне -->
+<!-- Блок хедер для страниц -->
 
 <header class="header">
   <div class="container">
     <div class="header-content">
       <h2 class="header__title"><span class="header__title-first">Оксана</span> <br><span class="header__title-second">Черкашина</span></h2>
-      <div class="header__img"> </div>
+      <div class="header__img"></div>
       <!-- /.header__img -->
 
       <p class="header__descr">Я педагог дополнительного образования в доме творчества и организатор региональных соревнований по робототехнике <a class="header__link link" href="http://xn--90acgda4cbjegs2i.xn--p1ai/" target="_blank">Роботы
           вперед!</a></p>
 
       <div class="links">
-        <a class="link" href="./index.html">На главную</a>
+        <a class="link" href="./about.html">Больше обо мне...</a>
       </div>
     </div>
     <!-- /.header__content -->
