--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -43,7 +43,7 @@
   }
 
   &__descr {
-    font-style: 14px;
+    font-size: 14px;
     margin-top: 30px;
     margin-bottom: 14px;
     line-height: 1.4;
