--- a/src/scss/blocks/_main.scss
+++ b/src/scss/blocks/_main.scss
@@ -94,6 +94,12 @@
 
   &__img {
     margin-right: 12px;
+    max-width: 100px;
+    width: 100%;
+
+    img {
+      width: 100%;
+    }
   }
 
   &__carousel {
