--- a/src/html/template/head-link.html
+++ b/src/html/template/head-link.html
@@ -1,3 +1,3 @@
 <!-- Подключение файла стилей для страниц блога -->
 
-<link rel="stylesheet" href="./css/loading.css">
+<link rel="stylesheet" href="./css/loading.css" rel="preload" as="style">
