--- a/src/html/template/blog/footer-script.html
+++ b/src/html/template/blog/footer-script.html
@@ -1,5 +1,5 @@
 <!-- Подключение скриптов и стилей в футере для блогов -->
 <link rel="stylesheet" href="../css/app.css">
 <link rel="stylesheet" href="../css/style.css">
-<script src="../js/app.min.js" charset="utf-8"></script>
-<script src="../js/main.min.js" charset="utf-8"></script>
+<script src="../js/app.min.js"></script>
+<script src="../js/main.min.js"></script>
