--- a/src/html/template/blog/head-link.html
+++ b/src/html/template/blog/head-link.html
@@ -1,3 +1,3 @@
 <!-- Подключение файла стилей для страниц блога -->
 
-<link rel="stylesheet" href="../css/loading.css" rel="preload" as="style">
+<link rel="stylesheet" href="../css/loading.css">
