--- a/src/html/template/head-meta.html
+++ b/src/html/template/head-meta.html
@@ -6,15 +6,28 @@
 <meta name="msapplication-TileImage" content="../favicons/mstile-144x144.png" />
 <meta name="msapplication-config" content="../browserconfig.xml" />
 <meta name="theme-color" content="#ffffff" />
-<meta name="og:title" content="Черкашина Оксана. Блог" />
-<meta name="og:description" content="Блог Оксаны Черкашиной. Официальный сайт педагога ДТ города Сланцы. Публикация новостей с мероприятий." />
-<meta name="og:url" content="https://okbur.ru" />
-<meta name="og:site_name" content="Черкашина Оксана. Блог." />
-<meta name="og:type" content="website" />
-<meta property="og:image" content="https://okbur.ru/img/meta-img.jpg" />
-<meta property="og:locale" content="ru_RU" />
-<meta name="description" Content=" Черкашина Оксана Владимировна. Блог. Официальный сайт педагога ДТ города Сланцы." />
+
+
 <meta name="Keywords" content="Черкашина Оксана Владимировна, Сланцевский ДТ, город Сланцы" />
+
+<meta property="og:type" content="website" />
+<meta property="og:site_name" content="okbur.ru" />
+<meta property="og:title" content="Блог Оксаны Черкашиной." />
+<meta property="og:description" content="Блог Оксаны Черкашиной. Официальный сайт педагога ДТ города Сланцы. Публикация новостей с мероприятий." />
+<meta property="og:url" content="https://okbur.ru" />
+<meta property="og:locale" content="ru_RU" />
+<meta property="og:image" content="https://okbur.ru/img/og-okbur.jpg" />
+<meta property="og:image:width" content="968">
+<meta property="og:image:height" content="504">
+<meta property="og:image" content="https://okbur.ru/img/og-okbur-mini.jpg" />
+<meta property="og:image:width" content="150">
+<meta property="og:image:height" content="83">
+<meta property="vk:image" content="https://okbur.ru/img/vk-okbur.jpg" />
+
+<!-- Микроразметка Schema.org -->
+<meta itemprop="name" content="okbur.ru" />
+<meta itemprop="description" content="Блог Оксаны Черкашиной. Официальный сайт педагога ДТ города Сланцы. Публикация новостей с мероприятий." />
+<meta itemprop="image" content="https://okbur.ru/img/meta-img.jpg" />
 
 <!-- Вставка фавиконки. Сгенерировано в https://realfavicongenerator.net -->
 <link rel="apple-touch-icon" sizes="180x180" href="../favicons/apple-touch-icon.png">
