fix: update meta open graph

--- a/src/html/template/blog/head-meta-robotron.html
+++ b/src/html/template/blog/head-meta-robotron.html
@@ -1,7 +1,20 @@
-<meta name="og:title" content="Черкашина Оксана. Роботрон 2018" />
-<meta name="og:description" content="Блог Оксаны Черкашиной. О том как мы побывали на соревнованиях Роботрон-2018." />
-<meta name="og:type" content="article" />
+<meta property="og:title" content="Блог Оксаны Черкашиной. Мы на Роботроне-2018." />
+<meta property="og:description"
+  content="21 апреля 2018 года в городе Пушкин прошел V открытый фестиваль по робототехнике «Роботрон». На фестивале можно было принять участие в разных видах соревнований. Обучающиеся МУДО «Сланцевский ЦИТ» участвовали в категории «Интеллектуальное сумо 15х15» и «Свободная творческая»." />
+<meta property="og:url" content="https://okbur.ru/blog/robotron2018-blog.html" />
+<meta property="og:locale" content="ru_RU" />
+<meta property="og:image" content="https://okbur.ru/img/og-robotron.jpg" />
+<meta property="og:image:width" content="968">
+<meta property="og:image:height" content="504">
+<meta property="og:image" content="https://okbur.ru/img/og-robotron-mini.jpg" />
+<meta property="og:image:width" content="150">
+<meta property="og:image:height" content="83">
+<meta property="vk:image" content="https://okbur.ru/img/vk-robotronk.jpg" />
 
-<meta name="description" Content="Блог Оксаны Черкашиной. О том как мы побывали на соревнованиях Роботрон-2018." />
-<meta name="Keywords" content="Черкашина Оксана, Сланцевский ДТ, город Сланцы, Роботрон-2018" />
-<meta property="og:image" content="https://okbur.ru/img/meta-img-robotron.jpg" />
+<!-- Микроразметка Schema.org -->
+<meta itemprop="name" content="okbur.ru" />
+<meta itemprop="description" content="21 апреля 2018 года в городе Пушкин прошел V открытый фестиваль по робототехнике «Роботрон». Обучающиеся МУДО «Сланцевский ЦИТ» участвовали в категории «Интеллектуальное сумо 15х15» и «Свободная творческая»." />
+<meta itemprop="image" content="https://okbur.ru/img/og-robotron.jpg" />
+
+
+<meta name="description" Content="21 апреля 2018 года в городе Пушкин прошел V открытый фестиваль по робототехнике «Роботрон». Обучающиеся МУДО «Сланцевский ЦИТ» участвовали в категории «Интеллектуальное сумо 15х15» и «Свободная творческая»." />
