--- a/src/html/template/head-meta.html
+++ b/src/html/template/head-meta.html
@@ -7,13 +7,12 @@
 <meta name="msapplication-config" content="../browserconfig.xml" />
 <meta name="theme-color" content="#ffffff" />
 
-
-<meta name="Keywords" content="Черкашина Оксана Владимировна, Сланцевский ДТ, город Сланцы" />
+<meta name="description" content="Блог Оксаны Черкашиной. Официальный сайт педагога ДТ города Сланцы. Публикация последних новостей с мероприятий, ссылки на дополнительные источники и мои проекты" />
 
 <meta property="og:type" content="website" />
 <meta property="og:site_name" content="okbur.ru" />
 <meta property="og:title" content="Блог Оксаны Черкашиной." />
-<meta property="og:description" content="Блог Оксаны Черкашиной. Официальный сайт педагога ДТ города Сланцы. Публикация новостей с мероприятий." />
+<meta property="og:description" content="Блог Оксаны Черкашиной. Официальный сайт педагога ДТ города Сланцы. Публикация последних новостей с мероприятий, ссылки на дополнительные источники и мои проекты." />
 <meta property="og:url" content="https://okbur.ru" />
 <meta property="og:locale" content="ru_RU" />
 <meta property="og:image" content="https://okbur.ru/img/og-okbur.jpg" />
@@ -26,8 +25,8 @@
 
 <!-- Микроразметка Schema.org -->
 <meta itemprop="name" content="okbur.ru" />
-<meta itemprop="description" content="Блог Оксаны Черкашиной. Официальный сайт педагога ДТ города Сланцы. Публикация новостей с мероприятий." />
-<meta itemprop="image" content="https://okbur.ru/img/meta-img.jpg" />
+<meta itemprop="description" content="Блог Оксаны Черкашиной. Официальный сайт педагога ДТ города Сланцы. Публикация последних новостей с мероприятий, ссылки на дополнительные источники и мои проекты." />
+<meta itemprop="image" content="https://okbur.ru/img/og-okbur.jpg" />
 
 <!-- Вставка фавиконки. Сгенерировано в https://realfavicongenerator.net -->
 <link rel="apple-touch-icon" sizes="180x180" href="../favicons/apple-touch-icon.png">
