fix: update gulpfile htmlmini & open graph for robotron

--- a/src/html/template/blog/head-meta-robotron.html
+++ b/src/html/template/blog/head-meta-robotron.html
@@ -9,7 +9,7 @@
 <meta property="og:image" content="https://okbur.ru/img/og-robotron-mini.jpg" />
 <meta property="og:image:width" content="150">
 <meta property="og:image:height" content="83">
-<meta property="vk:image" content="https://okbur.ru/img/vk-robotronk.jpg" />
+<meta property="vk:image" content="https://okbur.ru/img/vk-robotron.jpg" />
 
 <!-- Микроразметка Schema.org -->
 <meta itemprop="name" content="okbur.ru" />
